...
        ProfileScreen(),
      ];
      destinations = const [
        NavigationDestination(
          icon: Icon(Icons.storefront),
          label: 'Ürün',
          tooltip: 'Ürünler',
        ),
        NavigationDestination(
          icon: Icon(Icons.assignment_outlined),
          label: 'Talep',
          tooltip: 'Talepler',
        ),
...
